메인화면 뷰 작성
header, tab layout, frame layout 작성 및 메인화면에 쓰이는 f-lab로고와 gray color 추가, tabitem text에 들어갈 string resource생성

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,31 +4,37 @@
     <style name="Head1_B" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Head2_B" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Head3_B" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Body1_B" parent="Widget.AppCompat.TextView">
         <item name="fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Body2_B" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Body3_B" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
 
@@ -36,16 +42,19 @@
     <style name="Head1" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Head2" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Head3" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Body1" parent="Widget.AppCompat.TextView">
@@ -56,10 +65,12 @@
     <style name="Body2" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Body3" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
