--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/cl_top_bar"
         app:tabIndicatorColor="@color/black"
+        app:tabRippleColor="@color/black"
         app:tabSelectedTextColor="@color/black"
         app:tabTextAppearance="@style/Body1"
         app:tabTextColor="@color/gray">
