--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:id="@+id/iv_logo"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:contentDescription="@string/logo_img_content_description"
             android:src="@drawable/ic_flab"
             app:layout_constraintBottom_toBottomOf="@+id/tv_title"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,12 +50,12 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/recent_read_list" />
+            android:text="@string/recent_read_card_list" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/all_list" />
+            android:text="@string/all_card_list" />
 
     </com.google.android.material.tabs.TabLayout>
 
